--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,7 @@
 
 body {
   color: rgb(var(--foreground-rgb));
+  font-family: "Open Sans";
   background: linear-gradient(
       to bottom,
       transparent,
